; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_prof.c_prof_idump_accum_impl.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_prof.c_prof_idump_accum_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@config_prof = common dso_local global i32 0, align 4
@prof_idump_accumulated = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@prof_interval = common dso_local global i32 0, align 4
@ATOMIC_RELAXED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @prof_idump_accum_impl(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* @config_prof, align 4
  %9 = call i32 @cassert(i32 %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @malloc_mutex_lock(i32* %10, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @prof_idump_accumulated, i32 0, i32 0))
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @prof_idump_accumulated, i32 0, i32 1), align 4
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %4, align 4
  %15 = add nsw i32 %13, %14
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @prof_interval, align 4
  %18 = icmp sge i32 %16, %17
  %19 = zext i1 %18 to i32
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %5, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %2
  %23 = load i32, i32* @prof_interval, align 4
  %24 = load i32, i32* %7, align 4
  %25 = srem i32 %24, %23
  store i32 %25, i32* %7, align 4
  br label %26

26:                                               ; preds = %22, %2
  %27 = load i32, i32* %7, align 4
  store i32 %27, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @prof_idump_accumulated, i32 0, i32 1), align 4
  %28 = load i32*, i32** %3, align 8
  %29 = call i32 @malloc_mutex_unlock(i32* %28, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @prof_idump_accumulated, i32 0, i32 0))
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @cassert(i32) #1

declare dso_local i32 @malloc_mutex_lock(i32*, i32*) #1

declare dso_local i32 @malloc_mutex_unlock(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
